Do not reference the function after a stable is complete